--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" >
+    <!-- This is a comment -->
     <title>My Site Title</title>
 </head>
-
-<body>    
+<body>
+    <p>This is an empty body content</p>
 </body>
-
-</html>>
+</html>
